<resources>
    <string name="app_name">礼堂云</string>
    <string name="action_settings">Settings</string>
    <string name="name">账号</string>
    <string name="password">密码</string>
    <string name="new_password">新密码:</string>
    <string name="pas_again">再次输入:</string>
    <string name="name_hint">请输入账号</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="real_name_hint">请输入真实姓名</string>
    <string name="xiangzheng_hint">请输入所属乡镇</string>
    <string name="pas_hint">请输入密码</string>
    <string name="pas_agian_hint">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="lost_pwd">忘记密码?</string>
    <string name="login_inform">登录即代表阅读并同意《用户使用协议》</string>
    <string name="twice_click_exit">再按一次退出应用</string>
    <string name="logining">正在登录</string>
    <string name="auditorium">礼堂</string>
    <string name="auditorium_name">礼堂名称</string>
    <string name="address">地址</string>
    <string name="auditorium_address">礼堂地址</string>
    <string name="auditorium_introd">礼堂介绍</string>
    <string name="build_area">建筑面积</string>
    <string name="build_year">建筑年份</string>
    <string name="fac_introd">设备介绍</string>
    <string name="service_introd">服务介绍</string>
    <string name="admin">管理员</string>
    <string name="photo_report">图片上传</string>
    <string name="adm_name">管理员姓名</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="company">单位</string>
    <string name="job">职务</string>
    <string name="phonenumber">联系方式</string>
    <string name="remarks">备注</string>
    <string name="inform">信息</string>
    <string name="work_report">工作小结</string>
    <string name="exit_sanmen">再按一次退出</string>
    <string name="sign">签到</string>
    <string name="all">全部</string>
    <string name="no_sign">未签到</string>
    <string name="sign_record">签到记录</string>
    <string name="day_sign">日常签到</string>
    <string name="is_sign">已签到</string>
    <string name="live_xiangz">所属乡镇</string>
    <string name="live_auditorium">所属礼堂</string>
    <string name="auditorium_manger">礼堂信息管理</string>
    <string name="auditoriuminfo">礼堂信息</string>
    <string name="list_manger">点单管理</string>
    <string name="information_put">信息发布</string>
    <string name="activiy_manger">活动管理</string>
    <string name="declare_manger">申报管理</string>
    <string name="Online_advice">在线建言</string>
    <string name="report">汇报</string>
    <string name="sign_name">签到人</string>
    <string name="sign_time">签到时间</string>
    <string name="time">时间</string>
    <string name="sign_content">签到内容</string>
    <string name="noctice_bullein">通知公告</string>
    <string name="policy_inform">政策信息</string>
    <string name="edit">编辑</string>
    <string name="change">修改</string>
    <string name="delete">删除</string>
    <string name="search">查询</string>
    <string name="send_man">发送人</string>
    <string name="notice_man">通知对象</string>
    <string name="notice_time">通知时间</string>
    <string name="notice_content">通知内容</string>
    <string name="ohter">附件</string>
    <string name="ohter_content">附件内容:</string>
    <string name="ohter_report">附件上传</string>
    <string name="file_report">文件上传</string>
    <string name="put">发布</string>
    <string name="checkmore">查看详情</string>
    <string name="mine">我的</string>
    <string name="home">主页</string>
    <string name="sanmenauditorium">三门文化礼堂</string>
    <string name="today_hot">今日热点</string>
    <string name="auditorium_show">礼堂风采</string>
    <string name="activty_menu">活动清单</string>
    <string name="them_activiy">主题活动</string>
    <string name="activty_ponit">活动点单</string>
    <string name="activty_announce">活动预告</string>
    <string name="announce_content">预告内容</string>
    <string name="activty_show">活动展示</string>
    <string name="activty_time">活动时间</string>
    <string name="activty_unit">活动单位</string>
    <string name="activty_content">活动内容</string>
    <string name="activty_type">活动类型</string>
    <string name="activty_the_type">活动形式</string>
    <string name="inform_put">信息发布</string>
    <string name="online_vedio">在线视频</string>
    <string name="day_activity">日常活动</string>
    <string name="Village_situation">村概况</string>
    <string name="village">乡镇:</string>
    <string name="type_t">类型:</string>
    <string name="Council">理事会</string>
    <string name="team_build">文体队伍建设</string>
    <string name="submission">提 交</string>
    <string name="work_type">工作类型</string>
    <string name="work_content">工作内容</string>
    <string name="content">内容</string>
    <string name="problem_report">问题反馈</string>
    <string name="problem_advice">解决方法和建议</string>
    <string name="activity_inform_main">活动展开信息描述</string>
    <string name="read_more">查看更多>></string>
    <string name="read_all">查看全文>></string>
    <string name="raffic_statistics">流量统计</string>
    <string name="inform_change">信息修改</string>
    <string name="statistics_name">统计名称</string>
    <string name="login_statistics">登录总计</string>
    <string name="user_num">用户注册数量</string>
    <string name="zongji">总计</string>
    <string name="work_statitstics">工作统计</string>
    <string name="permission_cus_title">需要以下权限</string>
    <string name="permission_cus_msg">权限内容</string>
    <string name="preview_time">预告时间</string>
    <string name="organizer">组织者</string>
    <string name="activity_them">活动主题</string>
    <string name="save">保存</string>
    <string name="type">类型</string>
    <string name="put_man">发布人</string>
    <string name="tonotice_pepole">通知对象</string>
    <string name="title">标题</string>

    <string name="activity_main">活动信息</string>
    
    <string name="manger_adm">管理人员</string>
    <string name="sign_state">签到状态</string>
    <string name="work_state">工作状态</string>

    <string name="alert_notice">温馨提示</string>
    <string name="alert_update">版本更新</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="togo">立即前往</string>
    <string name="othertime">稍后再说</string>
    <string name="yishen">已审</string>
    <string name="weishen">未审</string>
    <string name="bohui">驳回</string>

    <string name="yitongguo">已通过</string>
    <string name="weitongguo">未通过</string>

    <string name="phonenum_peopele">联系人</string>
    <string name="wendang_manager">文档上传</string>
    <string name="help_wendang_manager">帮助文档</string>

    <string name="score_rank">积分排行</string>

    <string name="video">视频</string>
    <string name="report_video">上传视频</string>
    <string name="photo">图片</string>
    <string name="report_photo">上传图片</string>

    <string name="real_name">真实名字</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="jieshao">2013年以来，县委、县政府认真贯彻省市关于农村文化礼堂建设工作的部署，坚持高标准、高质量，积极整合社会资源，全力推进农村文化礼堂建设，截至2017年底，已建成105家农村文化礼堂，截止2018年底，已建成142家农村文化礼堂，2019年将继续新建37家农村文化礼堂。同时，我们也注重文化礼堂活动开展，推动教育教化、乡风乡愁、礼仪礼节、家德家风、文化文艺“五进”农村文化礼堂，每年组织开展“爱在三门 乐在礼堂”为主题的系列活动500余场，送电影下乡3200余场，送戏下乡200余场，组织近万人在礼堂参加进行广场舞、现代舞、摄影、书法等项目的培训，丰富了群众的业余文化生活，巩固了群众的精神文明建设的成果。</string>
</resources>
