<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/content_titile"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/statistics_name"
            android:padding="10dp"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zongji"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            android:padding="10dp"
            />

    </LinearLayout>

    <include layout="@layout/cut_line"/>
    <include layout="@layout/cut_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_statistics"
            android:padding="10dp"
            android:textColor="@color/textColor_two"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/tv_login_statistics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/textColor_two"
            android:textSize="@dimen/text_size"
            android:padding="10dp"
            />

    </LinearLayout>

    <include layout="@layout/cut_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_user_num_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_num"
            android:padding="10dp"
            android:textColor="@color/textColor_two"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/tv_user_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/textColor_two"
            android:textSize="@dimen/text_size"
            android:padding="10dp"
            />

    </LinearLayout>




</LinearLayout>
