<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#fff4f0"
        >

        <RelativeLayout
            android:id="@+id/rv_title"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sanmenauditorium"
                android:textSize="20sp"
                android:textColor="#fca6ac"/>

            <TextView
                android:id="@+id/tv_sign"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:background="@drawable/texview_selector"
                android:layout_centerVertical="true"
                android:textColor="#893e1f"
                android:visibility="gone"
                />
        </RelativeLayout>
        
        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rv_title"
            android:layout_marginBottom="20dp"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_day_hot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_hot_day"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/today_hot"/>

            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"/>

            <LinearLayout
                android:id="@+id/ll_auditor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_build"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/auditorium_show"/>

            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"/>

            <LinearLayout
                android:id="@+id/ll_home_activty_menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_menu"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/them_activiy"/>

            </LinearLayout>



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_vedio_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_home_viedo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/day_activity"/>

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_center_logo"/>

            </LinearLayout>


            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"/>
            <LinearLayout
                android:id="@+id/ll_home_activty_announce"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_activity"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/activty_announce"/>

            </LinearLayout>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/ll_home_inform_put"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="49dp"
                    android:src="@drawable/ic_home_inform_put" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/inform_put"/>

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"/>

            <LinearLayout
                android:id="@+id/ll_home_online_advice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_online_devices"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="@string/Online_advice"/>

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#e0e0e0"/>

            <LinearLayout
                android:id="@+id/ll_vedio_to_people"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_home_vedio_show"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:text="视频互动"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>
